# zero2prod

./: Cargo.toml  Dockerfile  buildspec.yaml  configuration.yaml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230102063113_create_subscriptions_table.sql  20230110064929_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
