[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
uuid = { version = "1.2.2", features = ["v4"] }
chrono = { version = "0.4.23", default-features = false, features = [ "clock" ] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
once_cell = "1.17.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.1"
serde-aux = "4.1.2"

[dev-dependencies]
reqwest = "0.11.13"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]
